# ComfyUI-GeometryPack

./: LICENSE  README.md  THIRD-PARTY-NOTICES.md  __init__.py  install.py  mesh_utils.py  nodes.py  prestartup_script.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  test_cgal_bunny.py
.github/workflows/: publish.yml  test.yml
assets/libigl-tutorial-data/: intersection_test_results.txt
assets/libigl_tutorial_data/: README.md  intersection_test_results.txt  test_intersections.py
build_vtk_bundle/: package-lock.json  package.json  vtk_gltf_bundle.js  webpack.config.js
nodes/: __init__.py  _split_nodes.py  analysis.py  blender_utils.py  boolean.py  combine.py  conversion.py  distance.py  examples.py  io.py  mesh_utils.py  primitives.py  reconstruction.py  remeshing.py  repair.py  skeleton.py  texture_remeshing.py  transforms.py  uv.py  visualization.py
nodes/_utils/: __init__.py  blender_bridge.py  mesh_ops.py
nodes/analysis/: __init__.py  connected_components.py  mesh_info.py  mesh_quality.py
nodes/boolean/: __init__.py  boolean_op.py
nodes/combine/: __init__.py  append_mesh.py  combine_meshes.py  combine_meshes_weighted.py
nodes/conversion/: __init__.py  mesh_to_pointcloud.py  pointcloud_to_mesh.py  subsample_pointcloud.py
nodes/distance/: __init__.py  mesh_to_mesh_distance.py  point_to_mesh_distance.py
nodes/examples/: __init__.py  example.py
tests/: requirements-test.txt
web/: viewer.html  viewer_dual.html  viewer_dual_slider.html  viewer_dual_textured.html  viewer_gaussian.html  viewer_pbr.html  viewer_uv.html  viewer_vtk.html  viewer_vtk_fields.html  viewer_vtk_filters.html  viewer_vtk_hidable.html  viewer_vtk_textured.html
workflows/: batch_remesh.json  boolean_ops.json  depth_map_to_mesh.json  fill_holes.json  fix_intersections_removal.json  fix_normals.json  fix_self_intersection.json  mesh_mesh_distance.json  normals.json  point_mesh_distance.json  preview_mesh.json  refine_mesh.json  remesh_intersections.json  remesh_texture.json  remeshing.json  side_by_side_viewer.json  skeleton_extraction.json  surface_reconstruction.json  test_loading.json  transform.json  transform_centering.json  uv_wrapping.json  uv_wrapping_igl.json  uvwrapping.json  view_texture.json
(+100 files in other folders)
