[project]
name = "comfyui-geometrypack"
description = "Professional geometry processing nodes for ComfyUI - mesh manipulation, remeshing, UV unwrapping, and 3D visualization with VTK.js"
version = "0.1.0"
license = { file = "LICENSE" }
dependencies = [
    "trimesh>=3.15.0",
    "libigl>=2.6.1",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "Pillow>=9.0.0",
    "pymeshlab>=2022.2",
    "cgal>=0.9.0",
    "point-cloud-utils>=0.30.0",
    "mesh-to-sdf>=0.0.14",
    "xatlas>=0.0.11",
    "PyNanoInstantMeshes>=0.1.0"
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-GeometryPack"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-GeometryPack/blob/main/README.md"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "ComfyUI-GeometryPack"
Icon = ""

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
